0.07
-------
New Features
^^^^^^^^^^^^
  * An ImageButton widget has been added.
  * A simple animation system has been added that allows widgets to move over time using linear interpolation.
  * The Video widget can now also play the audio from a video file if play_audio=True.
  * FontSize on labels is now themeable.
  * Two new utility functions for TextInput: select_all() and select_none(). (thanks to jplur)
  * TextInput now supports the delete key.
  * Widgets now have on_mouse_enter and on_mouse_exit callbacks.
Bugs Fixed
^^^^^^^^^^
  * The system's size now updates if the viewport size changes.
  * Issue 11: Externally resetting text input contents breaks selection. (thanks to jplur)
Other Stuff
^^^^^^^^^^^
  * Widgets can now define various _handle_*() methods that match the callbacks. This allows subclasses to use callbacks without interfering with the user-defined ones.
  * The themeing interface has been updated to simplify access to theme options.
  * System is now a subclass of Widget to simplify code and reduce code duplication.
  * Bgui now uses weakrefs to break dependency cycles and allow Python's GC to clean up widgets. This should solve most memory leak problems with Bgui.

0.06
-------
New Features
^^^^^^^^^^^^
  * Multiple Image widgets can reuse the same image file for efficiency (thanks to andrew-101)
  * ListBox widget
  * Image.texco is now exposed allowing for UV coordinates to be changed (thanks to jplur)

Bugs Fixed
^^^^^^^^^^
  * Images would loose their "on_hover" when they were clicked on
  * When removing a widget, that widget's cleanup method is now also run
  * Issue 3: Positioning of TextBlock is off when not passing BGUI_NORMALIZED

Other Stuff
^^^^^^^^^^^
  * Various TextInput improvements (thanks to jplur and Gomer)
  * Updated demo (thanks to jplur)
  * Moving or resizing a widget now affects it's children

0.05
----
New Features
^^^^^^^^^^^^
  * ProgressBar widget (thanks to andrew-101)