@@ -178,6 +178,13 @@ Controlled via the &#8216;percent&#8217; property which assumes percent as a 0-1
 <dd><p>Whether or not the widget is visible</p>
 </dd></dl>
 
+<dl class="attribute">
+<dt id="bgui.progress_bar.ProgressBar.z_index">
+<tt class="descname">z_index</tt><a class="headerlink" href="#bgui.progress_bar.ProgressBar.z_index" title="Permalink to this definition">¶</a></dt>
+<dd><p>The widget&#8217;s z-index. Widget&#8217;s with a higher z-index are drawn
+over those that have a lower z-index</p>
+</dd></dl>
+
 </dd></dl>
 
 </div>
