@@ -60,7 +60,7 @@
 <span id="text-block"></span><h1>text_block<a class="headerlink" href="#module-bgui.text_block" title="Permalink to this headline">¶</a></h1>
 <dl class="class">
 <dt id="bgui.text_block.TextBlock">
-<em class="property">class </em><tt class="descclassname">bgui.text_block.</tt><tt class="descname">TextBlock</tt><big>(</big><em>parent, name, text='', font=None, pt_size=30, color=None, aspect=None, size=[1, 1], pos=[0, 0], sub_theme='', overflow=1, options=12</em><big>)</big><a class="headerlink" href="#bgui.text_block.TextBlock" title="Permalink to this definition">¶</a></dt>
+<em class="property">class </em><tt class="descclassname">bgui.text_block.</tt><tt class="descname">TextBlock</tt><big>(</big><em>parent, name, text='', font=None, pt_size=None, color=None, aspect=None, size=[1, 1], pos=[0, 0], sub_theme='', overflow=1, options=12</em><big>)</big><a class="headerlink" href="#bgui.text_block.TextBlock" title="Permalink to this definition">¶</a></dt>
 <dd><p>Widget for displaying blocks of text</p>
 <table class="docutils field-list" frame="void" rules="none">
 <col class="field-name" />
@@ -185,6 +185,13 @@
 <dt id="bgui.text_block.TextBlock.visible">
 <tt class="descname">visible</tt><a class="headerlink" href="#bgui.text_block.TextBlock.visible" title="Permalink to this definition">¶</a></dt>
 <dd><p>Whether or not the widget is visible</p>
+</dd></dl>
+
+<dl class="attribute">
+<dt id="bgui.text_block.TextBlock.z_index">
+<tt class="descname">z_index</tt><a class="headerlink" href="#bgui.text_block.TextBlock.z_index" title="Permalink to this definition">¶</a></dt>
+<dd><p>The widget&#8217;s z-index. Widget&#8217;s with a higher z-index are drawn
+over those that have a lower z-index</p>
 </dd></dl>
 
 </dd></dl>
