@@ -70,7 +70,7 @@
 </dl>
 <dl class="class">
 <dt id="bgui.text_input.TextInput">
-<em class="property">class </em><tt class="descclassname">bgui.text_input.</tt><tt class="descname">TextInput</tt><big>(</big><em>parent, name, text='', prefix='', font=None, pt_size=30, color=None, aspect=None, size=[0, 0], pos=[0, 0], sub_theme='', input_options=0, options=12</em><big>)</big><a class="headerlink" href="#bgui.text_input.TextInput" title="Permalink to this definition">¶</a></dt>
+<em class="property">class </em><tt class="descclassname">bgui.text_input.</tt><tt class="descname">TextInput</tt><big>(</big><em>parent, name, text='', prefix='', font=None, pt_size=None, color=None, aspect=None, size=[0, 0], pos=[0, 0], sub_theme='', input_options=0, options=12</em><big>)</big><a class="headerlink" href="#bgui.text_input.TextInput" title="Permalink to this definition">¶</a></dt>
 <dd><p>Widget for getting text input</p>
 <table class="docutils field-list" frame="void" rules="none">
 <col class="field-name" />
@@ -207,6 +207,13 @@
 <dt id="bgui.text_input.TextInput.visible">
 <tt class="descname">visible</tt><a class="headerlink" href="#bgui.text_input.TextInput.visible" title="Permalink to this definition">¶</a></dt>
 <dd><p>Whether or not the widget is visible</p>
+</dd></dl>
+
+<dl class="attribute">
+<dt id="bgui.text_input.TextInput.z_index">
+<tt class="descname">z_index</tt><a class="headerlink" href="#bgui.text_input.TextInput.z_index" title="Permalink to this definition">¶</a></dt>
+<dd><p>The widget&#8217;s z-index. Widget&#8217;s with a higher z-index are drawn
+over those that have a lower z-index</p>
 </dd></dl>
 
 </dd></dl>
