@@ -213,6 +213,13 @@ be subclassed to create other widgets.</p>
 <dd><p>Whether or not the widget is visible</p>
 </dd></dl>
 
+<dl class="attribute">
+<dt id="bgui.widget.Widget.z_index">
+<tt class="descname">z_index</tt><a class="headerlink" href="#bgui.widget.Widget.z_index" title="Permalink to this definition">¶</a></dt>
+<dd><p>The widget&#8217;s z-index. Widget&#8217;s with a higher z-index are drawn
+over those that have a lower z-index</p>
+</dd></dl>
+
 </dd></dl>
 
 </div>
