@@ -52,10 +52,29 @@
             
   <div class="section" id="change-log">
 <h1>Change Log<a class="headerlink" href="#change-log" title="Permalink to this headline">¶</a></h1>
-<div class="section" id="id1">
-<h2>0.07<a class="headerlink" href="#id1" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="svn">
+<h2>SVN<a class="headerlink" href="#svn" title="Permalink to this headline">¶</a></h2>
 <div class="section" id="new-features">
 <h3>New Features<a class="headerlink" href="#new-features" title="Permalink to this headline">¶</a></h3>
+<blockquote>
+<div><ul class="simple">
+<li>FrameButton, TextBlock and TextInput now have a LabelSubTheme theme option which can be used to control the subtheme used for the underlying labels in these widgets.</li>
+<li>Labels can now have outlines.</li>
+<li>Widgets now have a z_index value for additional control over drawing order. (thanks to andrew-101)</li>
+</ul>
+</div></blockquote>
+</div>
+<div class="section" id="bugs-fixed">
+<h3>Bugs Fixed<a class="headerlink" href="#bugs-fixed" title="Permalink to this headline">¶</a></h3>
+</div>
+<div class="section" id="other-stuff">
+<h3>Other Stuff<a class="headerlink" href="#other-stuff" title="Permalink to this headline">¶</a></h3>
+</div>
+</div>
+<div class="section" id="id1">
+<h2>0.07<a class="headerlink" href="#id1" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="id2">
+<h3>New Features<a class="headerlink" href="#id2" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>An ImageButton widget has been added.</li>
@@ -68,8 +87,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="bugs-fixed">
-<h3>Bugs Fixed<a class="headerlink" href="#bugs-fixed" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id3">
+<h3>Bugs Fixed<a class="headerlink" href="#id3" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>The system&#8217;s size now updates if the viewport size changes.</li>
@@ -77,8 +96,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="other-stuff">
-<h3>Other Stuff<a class="headerlink" href="#other-stuff" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id4">
+<h3>Other Stuff<a class="headerlink" href="#id4" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Widgets can now define various _handle_*() methods that match the callbacks. This allows subclasses to use callbacks without interfering with the user-defined ones.</li>
@@ -89,10 +108,10 @@
 </div></blockquote>
 </div>
 </div>
-<div class="section" id="id2">
-<h2>0.06<a class="headerlink" href="#id2" title="Permalink to this headline">¶</a></h2>
-<div class="section" id="id3">
-<h3>New Features<a class="headerlink" href="#id3" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id5">
+<h2>0.06<a class="headerlink" href="#id5" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="id6">
+<h3>New Features<a class="headerlink" href="#id6" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Multiple Image widgets can reuse the same image file for efficiency (thanks to andrew-101)</li>
@@ -101,8 +120,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id4">
-<h3>Bugs Fixed<a class="headerlink" href="#id4" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id7">
+<h3>Bugs Fixed<a class="headerlink" href="#id7" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Images would loose their &#8220;on_hover&#8221; when they were clicked on</li>
@@ -111,8 +130,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id5">
-<h3>Other Stuff<a class="headerlink" href="#id5" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id8">
+<h3>Other Stuff<a class="headerlink" href="#id8" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Various TextInput improvements (thanks to jplur and Gomer)</li>
@@ -122,10 +141,10 @@
 </div></blockquote>
 </div>
 </div>
-<div class="section" id="id6">
-<h2>0.05<a class="headerlink" href="#id6" title="Permalink to this headline">¶</a></h2>
-<div class="section" id="id7">
-<h3>New Features<a class="headerlink" href="#id7" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id9">
+<h2>0.05<a class="headerlink" href="#id9" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="id10">
+<h3>New Features<a class="headerlink" href="#id10" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>ProgressBar widget (thanks to andrew-101)</li>
@@ -140,8 +159,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id8">
-<h3>Bugs Fixed<a class="headerlink" href="#id8" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id11">
+<h3>Bugs Fixed<a class="headerlink" href="#id11" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>BGUI now plays nice with &#8220;Show Physics Visualizations&#8221;</li>
@@ -150,8 +169,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id9">
-<h3>Other Stuff<a class="headerlink" href="#id9" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id12">
+<h3>Other Stuff<a class="headerlink" href="#id12" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Mouse focus is now more &#8220;intuitive&#8221; (thanks to Gomer)</li>
@@ -160,10 +179,10 @@
 </div></blockquote>
 </div>
 </div>
-<div class="section" id="id10">
-<h2>0.04<a class="headerlink" href="#id10" title="Permalink to this headline">¶</a></h2>
-<div class="section" id="id11">
-<h3>New Features<a class="headerlink" href="#id11" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id13">
+<h2>0.04<a class="headerlink" href="#id13" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="id14">
+<h3>New Features<a class="headerlink" href="#id14" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Font point sizes for Labels now scale with the screen height (1000px is the baseline). This isn&#8217;t &#8220;correct&#8221; but it makes things a lot easier. This can be disabled by setting System.normalize_text = False</li>
@@ -172,8 +191,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id12">
-<h3>Bugs Fixed<a class="headerlink" href="#id12" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id15">
+<h3>Bugs Fixed<a class="headerlink" href="#id15" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>ENTERKEY added to keydefs to better match Blender</li>
@@ -182,26 +201,26 @@
 </div></blockquote>
 </div>
 </div>
-<div class="section" id="id13">
-<h2>0.03<a class="headerlink" href="#id13" title="Permalink to this headline">¶</a></h2>
-<div class="section" id="id14">
-<h3>New Features<a class="headerlink" href="#id14" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id16">
+<h2>0.03<a class="headerlink" href="#id16" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="id17">
+<h3>New Features<a class="headerlink" href="#id17" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>BGUI now has themeing support (for mow info go here: <a class="reference external" href="http://stokes.dyndns.org/redmine/projects/bgui/wiki/Theming">http://stokes.dyndns.org/redmine/projects/bgui/wiki/Theming</a>)</li>
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id15">
-<h3>Bugs Fixed<a class="headerlink" href="#id15" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id18">
+<h3>Bugs Fixed<a class="headerlink" href="#id18" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>BGUI widgets could sometimes clip with scene elements</li>
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id16">
-<h3>Other Stuff<a class="headerlink" href="#id16" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id19">
+<h3>Other Stuff<a class="headerlink" href="#id19" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Widgets are now stored in OrderedDicts to allow for control over z sorting</li>
@@ -210,10 +229,10 @@
 </div></blockquote>
 </div>
 </div>
-<div class="section" id="id17">
-<h2>0.02<a class="headerlink" href="#id17" title="Permalink to this headline">¶</a></h2>
-<div class="section" id="id18">
-<h3>New Features<a class="headerlink" href="#id18" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id20">
+<h2>0.02<a class="headerlink" href="#id20" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="id21">
+<h3>New Features<a class="headerlink" href="#id21" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Video widget to display videos using VideoTexture (no sound support at the moment)</li>
@@ -228,8 +247,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id19">
-<h3>Bugs Fixed<a class="headerlink" href="#id19" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id22">
+<h3>Bugs Fixed<a class="headerlink" href="#id22" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>Drawing labels would disable textures for images</li>
@@ -237,8 +256,8 @@
 </ul>
 </div></blockquote>
 </div>
-<div class="section" id="id20">
-<h3>Other Stuff<a class="headerlink" href="#id20" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id23">
+<h3>Other Stuff<a class="headerlink" href="#id23" title="Permalink to this headline">¶</a></h3>
 <blockquote>
 <div><ul class="simple">
 <li>BGUI now uses the bottom left as (0, 0) to match OpenGL</li>
@@ -246,8 +265,8 @@
 </div></blockquote>
 </div>
 </div>
-<div class="section" id="id21">
-<h2>0.01<a class="headerlink" href="#id21" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="id24">
+<h2>0.01<a class="headerlink" href="#id24" title="Permalink to this headline">¶</a></h2>
 <p>Initial release</p>
 </div>
 </div>
@@ -261,42 +280,48 @@
   <h3><a href="index.html">Table Of Contents</a></h3>
   <ul>
 <li><a class="reference internal" href="#">Change Log</a><ul>
-<li><a class="reference internal" href="#id1">0.07</a><ul>
+<li><a class="reference internal" href="#svn">SVN</a><ul>
 <li><a class="reference internal" href="#new-features">New Features</a></li>
 <li><a class="reference internal" href="#bugs-fixed">Bugs Fixed</a></li>
 <li><a class="reference internal" href="#other-stuff">Other Stuff</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#id2">0.06</a><ul>
-<li><a class="reference internal" href="#id3">New Features</a></li>
-<li><a class="reference internal" href="#id4">Bugs Fixed</a></li>
-<li><a class="reference internal" href="#id5">Other Stuff</a></li>
+<li><a class="reference internal" href="#id1">0.07</a><ul>
+<li><a class="reference internal" href="#id2">New Features</a></li>
+<li><a class="reference internal" href="#id3">Bugs Fixed</a></li>
+<li><a class="reference internal" href="#id4">Other Stuff</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#id6">0.05</a><ul>
-<li><a class="reference internal" href="#id7">New Features</a></li>
-<li><a class="reference internal" href="#id8">Bugs Fixed</a></li>
-<li><a class="reference internal" href="#id9">Other Stuff</a></li>
+<li><a class="reference internal" href="#id5">0.06</a><ul>
+<li><a class="reference internal" href="#id6">New Features</a></li>
+<li><a class="reference internal" href="#id7">Bugs Fixed</a></li>
+<li><a class="reference internal" href="#id8">Other Stuff</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#id10">0.04</a><ul>
-<li><a class="reference internal" href="#id11">New Features</a></li>
-<li><a class="reference internal" href="#id12">Bugs Fixed</a></li>
+<li><a class="reference internal" href="#id9">0.05</a><ul>
+<li><a class="reference internal" href="#id10">New Features</a></li>
+<li><a class="reference internal" href="#id11">Bugs Fixed</a></li>
+<li><a class="reference internal" href="#id12">Other Stuff</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#id13">0.03</a><ul>
+<li><a class="reference internal" href="#id13">0.04</a><ul>
 <li><a class="reference internal" href="#id14">New Features</a></li>
 <li><a class="reference internal" href="#id15">Bugs Fixed</a></li>
-<li><a class="reference internal" href="#id16">Other Stuff</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#id17">0.02</a><ul>
-<li><a class="reference internal" href="#id18">New Features</a></li>
-<li><a class="reference internal" href="#id19">Bugs Fixed</a></li>
-<li><a class="reference internal" href="#id20">Other Stuff</a></li>
+<li><a class="reference internal" href="#id16">0.03</a><ul>
+<li><a class="reference internal" href="#id17">New Features</a></li>
+<li><a class="reference internal" href="#id18">Bugs Fixed</a></li>
+<li><a class="reference internal" href="#id19">Other Stuff</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#id21">0.01</a></li>
+<li><a class="reference internal" href="#id20">0.02</a><ul>
+<li><a class="reference internal" href="#id21">New Features</a></li>
+<li><a class="reference internal" href="#id22">Bugs Fixed</a></li>
+<li><a class="reference internal" href="#id23">Other Stuff</a></li>
+</ul>
+</li>
+<li><a class="reference internal" href="#id24">0.01</a></li>
 </ul>
 </li>
 </ul>
