@@ -67,6 +67,7 @@
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
+ | <a href="#Z"><strong>Z</strong></a>
  
 </div>
 <h2 id="B">B</h2>
@@ -1062,6 +1063,62 @@
   <dt><a href="api/widget.html#bgui.widget.Widget">Widget (class in bgui.widget)</a>
   </dt>
 
+  </dl></td>
+</tr></table>
+
+<h2 id="Z">Z</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%" valign="top"><dl>
+      
+  <dt><a href="api/frame.html#bgui.frame.Frame.z_index">z_index (bgui.frame.Frame attribute)</a>
+  </dt>
+
+      <dd><dl>
+        
+  <dt><a href="api/frame_button.html#bgui.frame_button.FrameButton.z_index">(bgui.frame_button.FrameButton attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/image.html#bgui.image.Image.z_index">(bgui.image.Image attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/image_button.html#bgui.image_button.ImageButton.z_index">(bgui.image_button.ImageButton attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/label.html#bgui.label.Label.z_index">(bgui.label.Label attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/list_box.html#bgui.list_box.ListBox.z_index">(bgui.list_box.ListBox attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/progress_bar.html#bgui.progress_bar.ProgressBar.z_index">(bgui.progress_bar.ProgressBar attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/system.html#bgui.system.System.z_index">(bgui.system.System attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/text_block.html#bgui.text_block.TextBlock.z_index">(bgui.text_block.TextBlock attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/text_input.html#bgui.text_input.TextInput.z_index">(bgui.text_input.TextInput attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/video.html#bgui.video.Video.z_index">(bgui.video.Video attribute)</a>
+  </dt>
+
+        
+  <dt><a href="api/widget.html#bgui.widget.Widget.z_index">(bgui.widget.Widget attribute)</a>
+  </dt>
+
+      </dl></dd>
   </dl></td>
 </tr></table>
 
