@@ -1,3 +1,14 @@
+SVN
+-------
+New Features
+^^^^^^^^^^^^
+  * FrameButton, TextBlock and TextInput now have a LabelSubTheme theme option which can be used to control the subtheme used for the underlying labels in these widgets.
+  * Labels can now have outlines.
+  * Widgets now have a z_index value for additional control over drawing order. (thanks to andrew-101)
+Bugs Fixed
+^^^^^^^^^^
+Other Stuff
+^^^^^^^^^^^
 0.07
 -------
 New Features
